fix overlapping buttons in apps-management

--- a/apps/settings/css/settings.scss
+++ b/apps/settings/css/settings.scss
@@ -1028,8 +1028,13 @@ span.version {
 	}
 
 	.counter {
-		padding-left: $header-height - 10px;
-		margin: 10px;
+		padding-left: $header-height;
+		padding-top: 10px;
+		width: 100%;
+		background-color: var(--color-main-background);
+		position: fixed;
+		z-index: 1;
+		height: $header-height;
 	}
 
 	&.installed {
@@ -1037,6 +1042,7 @@ span.version {
 			display: table;
 			width: 100%;
 			height: auto;
+			margin-top: $header-height;
 		}
 
 		margin-bottom: 100px;
